--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,8 @@
   --text-color: #131313;
   --link-color: #3b63fb;
   --link-hover-color: #1d3ecf;
+  --background-header: #011545;
+  
 
   /* fonts */
   --body-font-family: roboto, roboto-fallback, sans-serif;
