--- a/blocks/content-fragment/content-fragment.css
+++ b/blocks/content-fragment/content-fragment.css
@@ -8,7 +8,7 @@
 
 
 .section.burgundy.content-fragment-container {
- background-color: #f60077;
+ background-color: #002471;
 }
 
 [id^="destination-"] {
